--- a/index.css
+++ b/index.css
@@ -1,1 +1,104 @@
+@media(min-width:993px){
+    .block_1{
+        
+        display: inline-block;
+        width:  auto;
+        max-width: 32%;
+        margin-left: 8px;
+    
+    }
+        .block_2{
+            
+            display: inline-block;
+            width:  auto;
+            max-width: 32%;
+            margin-left: 8px;
+        
+        }
+        .block_3{
+            
+            display: inline-block;
+            width:  auto; 
+            max-width: 32%;
+        
+        }
+}
 
+@media(min-width: 768px) and (max-width: 992px){
+
+    .block_1{
+        
+        display: inline-block;
+        width:  auto;
+        max-width: 43%;
+        margin-left: 8px;
+    
+    }
+        .block_2{
+            
+            display: inline-block;
+            width:  auto;
+            max-width: 40%;
+            margin-bottom: 8px;
+        
+        }
+
+            .block_3{
+                
+                width:  auto; 
+                max-width: 84%;
+                margin-left: 6px;
+            }
+
+
+}
+
+@media (max-width:768px) {
+
+    .block_1{             
+        width:  auto;  
+        margin-bottom: 8px;
+    
+    }
+        .block_2{
+            
+            width:  auto;
+            margin-bottom: 8px;
+        
+        }
+
+            .block_3{
+                width:  auto; 
+                margin-bottom: 8px;
+            }   
+    
+}
+
+
+h1{
+    text-align: center;
+}
+
+.block_1{
+    border:solid black;
+    background-color: aqua;
+}
+
+    .block_2{
+        border:solid black;
+        background-color: aqua;
+    }
+
+        .block_3{
+            border:solid black;
+            background-color: aqua;
+        }
+.title span{
+    border:solid 2px yellow;
+    background-color:aqua;
+}
+.title{
+    position: relative;
+    left: 1px;
+    text-align: right;
+}
