--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ h1{
             background-color: rgb(212, 253, 253);
         }
 .title span{
-    border:solid 2px yellow;
+    border:solid 2px rgb(252, 233, 204);
     background-color:rgb(212, 253, 253);
 }
 .title{
