--- a/index/style.css
+++ b/index/style.css
@@ -1,75 +1,175 @@
-@media(min-width:993px){
-    .block_1{
-        
-        display: inline-block;
-        width:  auto;
-        max-width: 32%;
-        margin-left: 8px;
-    
-    }
-        .block_2{
-            
-            display: inline-block;
-            width:  auto;
-            max-width: 32%;
-            margin-left: 8px;
-        
-        }
-        .block_3{
-            
-            display: inline-block;
-            width:  auto; 
-            max-width: 32%;
-        
-        }
+* {
+	box-sizing: border-box;
 }
 
-@media(min-width: 768px) and (max-width: 992px){
-
-    .block_1{
-        
-        display: inline-block;
-        width:  auto;
-        max-width: 43%;
-        margin-left: 8px;
-    
-    }
-        .block_2{
-            
-            display: inline-block;
-            width:  auto;
-            max-width: 40%;
-            margin-bottom: 8px;
-        
-        }
-
-            .block_3{
-                
-                width:  auto; 
-                max-width: 84%;
-                margin-left: 6px;
-            }
-
-
+h1 {
+	text-align: center;
 }
 
-@media (max-width:768px) {
+body > div {
+	padding: 20px;
+}
 
-    .block_1{             
-        width:  auto;  
-        margin-bottom: 8px;
-    
-    }
-        .block_2{
-            
-            width:  auto;
-            margin-bottom: 8px;
-        
-        }
+.box {
+	background-color: rgb(218, 245, 218);
+	border: 2px solid black;
+}
 
-            .block_3{
-                width:  auto; 
-                margin-bottom: 8px;
-            }   
-    
+.caption1{
+	background-color: orange;
+}
+.caption2{
+	background-color: rgb(148, 9, 9);
+}
+.caption3{
+	background-color: pink;
+}
+.caption1, .caption2, .caption3 {
+	float: right !important;
+	color: white;
+	text-align: center;
+	border-bottom: 2px solid black;
+	border-left: 2px solid black;
+}
+p {
+	float: right;
+}
+
+@media (min-width: 993px){
+
+	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8,
+	.col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+	float: left;
+	}
+	.col-lg-1 {
+	width: 8.33%;
+	}
+	.col-lg-2 {
+	width: 16.66%;
+	}
+	.col-lg-3 {
+	width: 25%;
+	}
+	.col-lg-4 {
+	width: 33.33%;
+
+	}
+	.col-lg-5 {
+	width: 41.66%;
+	}
+	.col-lg-6 {
+	width: 50%;
+	}
+	.col-lg-7 {
+	width: 58.33%;
+	}
+	.col-lg-8 {
+	width: 66.66%;
+	}
+	.col-lg-9 {
+	width: 75%;
+	}
+	.col-lg-10 {
+	width: 83.33%;
+	}
+	.col-lg-11 {
+	width: 91.66%;
+	}
+	.col-lg-12 {
+	width: 100%;
+	}
+	
+}
+
+@media (min-width: 769px) and (max-width: 992px){
+	
+	.col-md-1, .mdl-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8,
+	.col-md-9, .mdl-md-10, .col-md-11, .col-md-12 {
+	float: left;
+	}
+	.col-md-1 {
+	width: 8.33%;
+	}
+	.col-md-2 {
+	width: 16.66%;
+	}
+	.col-md-3 {
+	width: 25%;
+	}
+	.col-md-4 {
+	width: 33.33%;
+
+	}
+	.col-md-5 {
+	width: 41.66%;
+	}
+	.col-md-6 {
+	width: 50%;
+	}
+	.col-md-7 {
+	width: 58.33%;
+	}
+	.col-md-8 {
+	width: 66.66%;
+	}
+	.col-md-9 {
+	width: 75%;
+	}
+	.col-md-10 {
+	width: 83.33%;
+	}
+	.col-md-11 {
+	width: 91.66%;
+	}
+	.col-md-12 {
+	width: 100%;
+	}
+	
+}
+
+
+@media (max-width: 768px){
+	
+	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8,
+	.col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+	float: left;
+	}
+	.col-sm-1 {
+	width: 8.33%;
+	}
+	.col-sm-2 {
+	width: 16.66%;
+	}
+	.col-sm-3 {
+	width: 25%;
+	}
+	.col-sm-4 {
+	width: 33.33%;
+
+	}
+	.col-sm-5 {
+	width: 41.66%;
+	}
+	.col-sm-6 {
+	width: 50%;
+	}
+	.col-sm-7 {
+	width: 58.33%;
+	}
+	.col-sm-8 {
+	width: 66.66%;
+	}
+	.col-sm-9 {
+	width: 75%;
+	}
+	.col-sm-10 {
+	width: 83.33%;
+	}
+	.col-sm-11 {
+	width: 91.66%;
+	}
+	.col-sm-12 {
+	width: 100%;
+	}
+	
 }
